@@ -304,7 +304,9 @@ on_trigger_clicked			(gpointer	ignored,
 
     case VBI_LINK_PAGE:
     case VBI_LINK_SUBPAGE:
-fprintf(stderr, "trigger->page %d\n", trigger->page);
+
+fprintf(stderr, "trigger->page %x\n", trigger->page);
+#warning
       open_in_new_ttxview(trigger->page, trigger->subpage);
       break;
 
