@@ -1,15 +1,17 @@
 22.11.2001	Fixes <mschimek@users.sf.net>
 
-	* libvbi: "bad signal -> eof_sent", probably due to exceeding
-	  the select timeout limit (cant test mmapped vbi) triggering
-	  a fatal error considered eof. Read interface not affected.
-	  Timeouts are ignored now, however a better response is
-	  warranted, revisit at a later date.
+	* v4lx.c: "bad signal -> eof_sent", probably due to exceeding
+	  the select timeout limit (can't test mmapped vbi), -> fatal
+	  error considered eof. Read interface not affected. Timeouts
+	  are ignored now, however a better response is warranted,
+	  this code to be revisited at a later date.
 	* teletext.c, ttxview.c: TOP index fixes: insufficient pg init,
-	  wrong char set, next subpage didn't work, char size heisenbug
-	  (compiler?).
+	  wrong char set, next subp didn't work, char size heisenbug (gcc?).
 	* teletext.c, vbi_page_title: Use correct national character set.
 	* teletext.c: [default] object invocation did not recursively abort.
+	* packet.c, eacem trigger: didn't consider 41st column. First
+	  encounter of 'ttx:' trigger, decoding worked out of the box
+	  incl nuid and stuff, link not quite.
 
 20.11.2001	Fixes <mschimek@users.sf.net>
 
